--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,12 +29,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+    
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   http: ^0.12.1
+  share: ^0.6.5+4
+  transparent_image: ^0.1.0
 
 dev_dependencies:
   flutter_test:
